Switching to sqlite

--- a/oop_logistics_projects/src/main/resources/fxml/AnalysisPanel.fxml
+++ b/oop_logistics_projects/src/main/resources/fxml/AnalysisPanel.fxml
@@ -19,6 +19,9 @@
     </HBox>
 
     <HBox spacing="10" alignment="CENTER_LEFT">
+        
+        <Button text="Load Database Data" onAction="#handleLoadDatabaseClick" styleClass="button"/>
+
         <ComboBox fx:id="modelSelector" prefWidth="200">
             <items>
                 <FXCollections fx:factory="observableArrayList">
